traefik/V2.0/traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: kube-gateway
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      tolerations:
        - operator: "Exists"
      #      nodeSelector:
      #        kubernetes.io/hostname: ydzs-master
      containers:
        - image: traefik:v2.0
          name: traefik-ingress-lb
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
            - name: websecure
              containerPort: 443
              hostPort: 443
            - name: admin
              containerPort: 8080
          args:
            - --entrypoints.web.Address=:80
            - --entrypoints.websecure.Address=:443
            - --api.insecure=true
            - --providers.kubernetescrd
            - --api
            - --api.dashboard=true
            - --accesslog
            # 使用 tls 验证这种方式
            - --certificatesresolvers.myresolver.acme.tlschallenge=true
            # 邮箱配置
            - --certificatesResolvers.myresolver.acme.email=yinshengphy@gmail.com
            # 保存 ACME 证书的位置
            - --certificatesResolvers.myresolver.acme.storage="acme.json"
            # 下面是用于测试的ca服务，如果https证书生成成功了，则移除下面参数
            - --certificatesresolvers.myresolver.acme.caserver=https://acme-v02.api.letsencrypt.org/directory
---

kind: Service
apiVersion: v1
metadata:
  name: traefik
  namespace: kube-gateway
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 8080
      name: admin
